# Prime_Plot_AI

./: .gitignore  README.md  evolve_linear_genome.py  list_runs.py  pyproject.toml  run_autonomous_discovery.py  run_discovery.py  run_visual_analysis.py
doc/: ARCHITECTURE.md  OUTPUT_ANALYSIS.md
examples/: demo_prediction_pipeline.py  demo_prime_search.py  quickstart.py
src/prime_plot/: __init__.py  cli.py
src/prime_plot/analysis/: __init__.py  density.py  enhanced_detection.py  patterns.py
src/prime_plot/core/: __init__.py  polynomials.py  sieve.py
src/prime_plot/discovery/: __init__.py  evolutionary.py  genome.py  parametric.py
src/prime_plot/evaluation/: __init__.py  baseline.py  detectors.py  metrics.py  pipeline.py  predictive_power.py
src/prime_plot/ml/: __init__.py  dataset.py  dataset_multi.py  models.py  models_3d.py  train.py
src/prime_plot/pipeline/: __init__.py  frequency_analysis.py  polynomial_search.py  predictor.py  prime_search.py  residual_search.py
src/prime_plot/utils/: __init__.py  run_manager.py
src/prime_plot/visualization/: __init__.py  fibonacci.py  klauber.py  modular.py  novel.py  novel_predictive.py  renderer.py  sacks.py  ulam.py  ulam_3d.py  ulam_3d_true.py  vogel.py
tests/: __init__.py  test_evaluation.py  test_fibonacci.py  test_models.py  test_modular.py  test_sieve.py  test_ulam.py  test_vogel.py
